test/statements/ferguson/ref-to-nil.good
ref-to-nil.chpl:2: error: Cannot create a non-const reference to nil
